# Recordlab_nodes

./: .gitignore  CMakeLists.txt  README.md  Recordlab重构计划.md  pyproject.toml
config/: agents_config.json  recordlab_gui.json  recordlab_launcher.json
include/recordlab_nodes/: device_adapters.h  device_node_base.h  gui_config.h  health_monitor.h  launcher_config.h  launcher_node.h  lifecycle_manager.h  node_base.h  watchdog_node.h
include/recordlab_nodes/deviceNodes/bsp/: bsp_device_adapter.h  bsp_node.h
include/recordlab_nodes/deviceNodes/mcu/: mcu_device_adapter.h  mcu_node.h
include/recordlab_nodes/deviceNodes/nviz/: nviz_device_adapter.h  nviz_node.h
include/recordlab_nodes/device_nodes/bsp/: bsp_device_adapter.h  bsp_node.h
include/recordlab_nodes/device_nodes/mcu/: mcu_device_adapter.h  mcu_node.h
include/recordlab_nodes/device_nodes/nviz/: nviz_device_adapter.h  nviz_node.h
node_scripts/: bsp_script_common.py  imu_simulation_record_demo.py  record_bsp_imu.py  record_bsp_imu_cam.py  record_bsp_imu_dynamic.py  record_bsp_imu_static.py  record_bsp_rgb.py  record_bsp_rgb_raw.py
recordlab_nodes/: __init__.py
recordlab_nodes/common/: __init__.py  data_registry_client.py  device_checker.py  logger_config.py  message_types.py  motion_detector.py  paths.py  rate_limiter.py  topics.py
recordlab_nodes/core/: __init__.py  base_node.py  main_node.py  node_runtime.py  publishers.py  record_writers.py
recordlab_nodes/nodes/: __init__.py
recordlab_nodes/nodes/android/: __init__.py  android_node.py
recordlab_nodes/nodes/bsp/: __init__.py  bsp_aux_workers.py  bsp_device.py  bsp_main_node.py  bsp_writers.py
recordlab_nodes/nodes/helen/: __init__.py  helen_main_node.py
recordlab_nodes/nodes/imu_sim/: __init__.py  csv_data_reader.py  dataset_device.py  imu_data_player.py  imu_sim_node.py
recordlab_nodes/nodes/mcu/: __init__.py  mcu_main_node.py
recordlab_nodes/nodes/nebula/: __init__.py  nebula_node.py
recordlab_nodes/nodes/nviz/: __init__.py  nviz_node.py
recordlab_nodes/nodes/nviz/nviz_assets/nviz_receiver/: nreal_link_tcp.py
recordlab_nodes/nodes/nviz/nviz_assets/shell/: close_pilot_gf.sh  gf_3dof_start.sh  open_pilot_gf.sh
recordlab_nodes/protocols/: __init__.py
recordlab_nodes/protocols/nreal_link/: nreal_link_base.py  nreal_link_tcp.py  payload_parser.py
scripts/: check_environment.py  install_recordlab_deps.sh  nviz_ur_base.py  package_release.sh  record_android_imu_simple_test.py  record_bsp_imu_cam.py  record_mcu_id1088_ur_gt_3dof_batch.py  record_nebula_simple_test.py  record_nviz_ur_gt_3dof_batch.py  record_ur_android_imu_batch.py  record_ur_gt_3dof.py  record_ur_gt_3dof_batch.py  start_recordlab.sh
scripts/common/: record_path_helper.py  script_agent_helpers.py
scripts/runtime/: run_recordlab_script.py
src/: device_adapters.cpp  device_node_base.cpp  gui_config.cpp  health_monitor.cpp  launcher_config.cpp  launcher_node.cpp  lifecycle_manager.cpp  node_base.cpp  watchdog_node.cpp
src/deviceNodes/bsp/: bsp_device_adapter.cpp  bsp_node.cpp
src/deviceNodes/mcu/: mcu_device_adapter.cpp  mcu_node.cpp
src/deviceNodes/nviz/: nviz_device_adapter.cpp  nviz_node.cpp
src/device_nodes/bsp/: bsp_device_adapter.cpp  bsp_node.cpp
src/device_nodes/mcu/: mcu_device_adapter.cpp  mcu_node.cpp
src/device_nodes/nviz/: nviz_device_adapter.cpp  nviz_node.cpp
test/: test_bsp_adapter_contract.cpp  test_bsp_check_usb_mapping.cpp  test_bsp_node_registration.cpp  test_bsp_sdk_contract.cpp  test_device_lifecycle.cpp  test_gui_config.cpp  test_health_monitor.cpp  test_lifecycle_manager_recovery.cpp  test_mcu_adapter_contract.cpp  test_mcu_node_registration.cpp  test_node_base.cpp  test_nviz_adapter_contract.cpp  test_nviz_node_registration.cpp  test_record_bsp_imu_cam_script.cpp  test_record_nviz_ur_gt_3dof_batch_script.cpp  test_watchdog_node.cpp  test_xreal_device_catalog.cpp  test_xreal_runtime_bridge.cpp
tests/: test_agent_config_contract.py  test_android_node.py  test_base_node_contract.py  test_bsp_device_recovery.py  test_device_checker_catalog.py  test_imu_sim_data_flow.py  test_imu_sim_node.py  test_message_encoding.py  test_motion_detector.py  test_nebula_node.py  test_node_runtime.py  test_publishers.py  test_script_runtime_workflow.py
tools/: bsp_node.cpp  health_monitor.cpp  lifecycle_manager.cpp  mcu_node.cpp  nviz_node.cpp  recorder_node.cpp  recordlab_gui.cpp  recordlab_launcher.cpp  watchdog_node.cpp
