[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recordlab-nodes"
version = "0.1.0"
description = "RecordLab business nodes implemented in Python"
requires-python = ">=3.8"
dependencies = [
  "pyzmq>=25.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["recordlab_nodes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
